@@ -19,6 +19,7 @@ Moo = 0
 Moose = 2.1207
 Mouse = 0
 namespace::autoclean = 0
+Sub::Quote = 0
 
 [MetaNoIndex]
 directory = t/lib
